[gd_scene load_steps=31 format=3 uid="uid://ysqn7lnw8rwy"]

[ext_resource type="Texture2D" uid="uid://cr3hjn5lfemig" path="res://newAssets/demon/demon_attack_2/frame1 (7).png" id="1_20r6y"]
[ext_resource type="Script" path="res://Characters/Enemies/boss_enemy.gd" id="1_f41g3"]
[ext_resource type="Texture2D" uid="uid://bk2ymrodhptsd" path="res://newAssets/demon/demon_attack_2/frame2 (6).png" id="2_547fl"]
[ext_resource type="Texture2D" uid="uid://djjq7egdcccu4" path="res://newAssets/demon/demon_attack_2/frame3 (7).png" id="3_3skmp"]
[ext_resource type="Texture2D" uid="uid://bk480lac1s5f" path="res://newAssets/demon/demon_attack_2/frame4.png" id="4_hjb8c"]
[ext_resource type="Texture2D" uid="uid://dg5ol1bxeeso7" path="res://newAssets/demon/demon_attack_2/frame5.png" id="5_h4m8g"]
[ext_resource type="Texture2D" uid="uid://b07mji11ipr6c" path="res://newAssets/demon/demon_attack_2/frame6 (7).png" id="6_rrkrb"]
[ext_resource type="Texture2D" uid="uid://btolfxnfa3cq5" path="res://newAssets/demon/demon_attack_2/frame7.png" id="7_5ltkq"]
[ext_resource type="Texture2D" uid="uid://4bfs1hni44av" path="res://newAssets/demon/demon_attack_2/frame8.png" id="8_2adyr"]
[ext_resource type="Texture2D" uid="uid://cn5gpya82ts40" path="res://newAssets/demon/Demon_Boss_hurt.png" id="9_sw30r"]
[ext_resource type="Texture2D" uid="uid://b581oem47q75d" path="res://Assets/Enemies/boss-monsters-pixel-art/2 Demon/Demon_Boss_death.png" id="10_8vuw5"]
[ext_resource type="Texture2D" uid="uid://37mo7gesbd84" path="res://newAssets/demon/demon_walk/frame1 (9).png" id="10_0570j"]
[ext_resource type="Texture2D" uid="uid://cb64y2bgsof1l" path="res://newAssets/demon/demon_walk/frame2 (8).png" id="11_j0tsf"]
[ext_resource type="Texture2D" uid="uid://dq2nogw56034m" path="res://newAssets/demon/demon_walk/frame3 (9).png" id="12_thqy2"]
[ext_resource type="Texture2D" uid="uid://08l04g4o4821" path="res://newAssets/demon/demon_walk/frame4 (9).png" id="13_8xx3v"]
[ext_resource type="Texture2D" uid="uid://cratf56kno361" path="res://newAssets/demon/demon_walk/frame5 (9).png" id="14_vetpq"]
[ext_resource type="Texture2D" uid="uid://877tmbq76gap" path="res://newAssets/demon/demon_walk/frame6 (9).png" id="15_4mfax"]
[ext_resource type="AudioStream" uid="uid://na5pger5sbt8" path="res://Assets/Sounds/FX/demonAttackSound.mp3" id="18_46vtf"]
[ext_resource type="AudioStream" uid="uid://ckglwfifxhbjj" path="res://Assets/Sounds/FX/demonStompingSound.mp3" id="19_hgu7c"]
[ext_resource type="AudioStream" uid="uid://banl8eb27358k" path="res://Assets/Sounds/FX/demonHurtSound.mp3" id="20_q3rel"]
[ext_resource type="AudioStream" uid="uid://dif1sbod3d0ya" path="res://Assets/Sounds/FX/demonDeathSound.wav" id="21_e0206"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vb5o7"]
atlas = ExtResource("10_8vuw5")
region = Rect2(28, 0, 75, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_af7co"]
atlas = ExtResource("10_8vuw5")
region = Rect2(121, 0, 75, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hggf"]
atlas = ExtResource("10_8vuw5")
region = Rect2(214, 0, 75, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hksw"]
atlas = ExtResource("10_8vuw5")
region = Rect2(307, 0, 75, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dapn"]
atlas = ExtResource("9_sw30r")
region = Rect2(37, 0, 51, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2lmm"]
atlas = ExtResource("9_sw30r")
region = Rect2(139, 0, 48, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_qei3c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_20r6y")
}, {
"duration": 1.0,
"texture": ExtResource("2_547fl")
}, {
"duration": 1.0,
"texture": ExtResource("3_3skmp")
}, {
"duration": 1.0,
"texture": ExtResource("4_hjb8c")
}, {
"duration": 1.0,
"texture": ExtResource("5_h4m8g")
}, {
"duration": 1.0,
"texture": ExtResource("6_rrkrb")
}, {
"duration": 1.0,
"texture": ExtResource("7_5ltkq")
}, {
"duration": 1.0,
"texture": ExtResource("8_2adyr")
}],
"loop": true,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb5o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_af7co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hggf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hksw")
}],
"loop": true,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dapn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2lmm")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_0570j")
}, {
"duration": 1.0,
"texture": ExtResource("11_j0tsf")
}, {
"duration": 1.0,
"texture": ExtResource("12_thqy2")
}, {
"duration": 1.0,
"texture": ExtResource("13_8xx3v")
}, {
"duration": 1.0,
"texture": ExtResource("14_vetpq")
}, {
"duration": 1.0,
"texture": ExtResource("15_4mfax")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uh36t"]
size = Vector2(58, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjcap"]
size = Vector2(201, 129)

[node name="bossEnemy" type="CharacterBody2D"]
script = ExtResource("1_f41g3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -55)
scale = Vector2(2.70833, 2.70833)
sprite_frames = SubResource("SpriteFrames_qei3c")
animation = &"attack"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 72.5)
shape = SubResource("RectangleShape2D_uh36t")

[node name="enemyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyArea"]
position = Vector2(-52.5, 4.5)
shape = SubResource("RectangleShape2D_jjcap")

[node name="attackFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_46vtf")

[node name="stompFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_hgu7c")
volume_db = -5.0
pitch_scale = 1.43
max_distance = 1000.0

[node name="hurtFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_q3rel")
volume_db = -10.0

[node name="deathFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_e0206")

[connection signal="area_entered" from="enemyArea" to="." method="_on_enemy_area_area_entered"]
[connection signal="body_entered" from="enemyArea" to="." method="_on_enemy_area_body_entered"]
[connection signal="body_exited" from="enemyArea" to="." method="_on_enemy_area_body_exited"]
